tests/negative/test_fnc_redecl_same_sig_ret_type.orb
fnc foo (x:i32) ();
fnc foo (y:i32) i32;

fnc main () () {};